DRAKEN-3072: Add scheduled billing db model
