# src/integration-test/resources/openapi/openapi.yaml
@@ -7,7 +7,7 @@ info:
     url: https://opensource.org/licenses/MIT
   version: "1.1"
 servers:
-  - url: http://localhost:36097
+  - url: http://localhost:42717
     description: Generated server url
 tags:
   - name: Billing Data Collector
@@ -403,7 +403,7 @@ paths:
             application/problem+json:
               schema:
                 $ref: "#/components/schemas/Problem"
-  /{municipalityId}/scheduled-billing/external/{externalId}:
+  /{municipalityId}/scheduled-billing/external/{source}/{externalId}:
     get:
       tags:
         - Billing Data Collector
@@ -417,6 +417,16 @@ paths:
           schema:
             type: string
           example: 2281
+        - name: source
+          in: path
+          description: Source system where data is collected
+          required: true
+          schema:
+            type: string
+            enum:
+              - CONTRACT
+              - OPENE
+          example: CONTRACT
         - name: externalId
           in: path
           description: externalId of scheduled billing
